--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,19 +13,19 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.3
-
+  google_fonts: ^0.3.9
 
 
 
   flutter_launcher_icons: 0.7.4
 
 # Run Terminal:
-#  $ flutter pub get
-#  $ flutter pub pub run flutter_launcher_icons:main
-#flutter_icons:
-#  android: true
-#  ios: true
-#  image_path: "assets/favicon.png"
+  $ flutter pub get
+  $ flutter pub pub run flutter_launcher_icons:main
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/favicon.png"
 
 
 
@@ -39,18 +39,24 @@ flutter:
 
 
   assets:
+    - assets/favicon.png
     - assets/images/
 
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/montserrat/Montserrat-Regular.ttf
+        - asset: assets/fonts/montserrat/Montserrat-Medium.ttf
+          weight : 400
+        - asset: assets/fonts/montserrat/Montserrat-Italic.ttf
+          style: italic
+        - asset: assets/fonts/montserrat/Montserrat-Light.ttf
+          weight: 200
+        - asset: assets/fonts/montserrat/Montserrat-SemiBold.ttf
+          weight: 500
+        - asset: assets/fonts/montserrat/Montserrat-Bold.ttf
+          weight: 700
+    - family: Icons
+      fonts:
+        - asset: assets/fonts/icons.ttf
